--- a/src/main/resources/develop/application-mysql.properties
+++ b/src/main/resources/develop/application-mysql.properties
@@ -1,3 +1,5 @@
+spring.profile.value=develop-mysql
+
 spring.datasource.url=jdbc:mysql://localhost/sejongtrack?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=utf8&allowMultiQueries=true
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.username=root
@@ -15,9 +17,6 @@ spring.jpa.database=mysql
 spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
 
 spring.datasource.initialization-mode=always
-
-logging.level.org.hibernate=info
-logging.level.org.springframework.web=INFO
 
 spring.mvc.view.prefix=/WEB-INF/views/
 spring.mvc.view.suffix=.jsp
